# CelestialSim

./: .gitignore  AGENTS.md  CLAUDE.md  CelestialSim.csproj  CelestialSim.sln  README.md  project.godot  zensical.toml
.cache/: .gitignore
.github/workflows/: docs.yml  release.yml
docs/: README.md  docfx.json  filterConfig.yml  getting-started.md  index.md  install.md  introduction.md  toc.yml
rust/: .gdignore  Cargo.toml  build.rs
rust/src/: blue_noise.rs  buffer_info.rs  camera_snapshot_texture.rs  celestial.rs  compare_run_algo_test.rs  compositor.rs  compute_utils.rs  cpu_subdivide.rs  debug_dump.rs  initial_state.rs  layer_resources.rs  lib.rs  mesh_source.rs  perf.rs  shared_texture.rs  state.rs  texture_gen.rs  vertex_texture_spike.rs
rust/src/algo/: compact_buffers.rs  div_lod.rs  dump_format.rs  final_state.rs  mark_tris.rs  merge_lod.rs  mod.rs  run_algo.rs  update_neighbors.rs
rust/src/layers/: height_shader_terrain.rs  mod.rs  scatter.rs  sphere_terrain.rs
rust/tests/: godot_runner.rs  shader_test_utils.rs  test_blue_noise.rs  test_blue_noise_bench.rs  test_blue_noise_warm_project_cache.rs  test_compute_visible_prefix_sum.rs  test_cubemap_noise.rs  test_godot_integration.rs  test_no_holes.rs  test_scatter_placement_variants.rs  test_sphere_terrain.rs
scenes/: CompositorTest.tscn  CompositorTestRust.tscn  adaptive_texture_lod_test.tscn  celestial_csharp_aggressive.tscn  celestial_csharp_demo.tscn  celestial_high.tscn  celestial_medium.tscn  celestial_rust_aggressive.tscn  celestial_rust_benchmark.tscn  celestial_rust_demo.tscn  celestial_sim_small.tscn  celestial_terrain_demo.tscn  celestial_texture_demo.tscn  dev.tscn  scatter_mask_preview_test.tscn  snapshot_debug_test.tscn  stage.tscn  stage_benchmark.tscn
scripts/: Movement.cs  Movement.cs.uid  OrbitBenchmark.cs  OrbitBenchmark.cs.uid  lod_test_camera.gd  lod_test_camera.gd.uid  snapshot_debug_oscillator.gd  snapshot_debug_oscillator.gd.uid
(+187 files in other folders)
