[package]
name = "celestial_sim_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "experimental-threads",
] }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
wgpu = "24"
pollster = "0.4"
naga = { version = "24", features = ["spv-in", "wgsl-out"] }
serde_json = "1"
