[package]
name = "celestial_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "experimental-threads",
    "experimental-godot-api",
] }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
wgpu = "24"
pollster = "0.4"
naga = { version = "24", features = ["spv-in", "wgsl-out"] }
serde_json = "1"
rand = "0.9"

[profile.release]
debug = true
strip = false           # Don't remove the info perf needs
split-debuginfo = "off" # Keep symbols in the binary for easier perf access
