[package]
name = "celestial_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "generate_blue_noise"
path = "src/bin/generate_blue_noise.rs"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "experimental-threads",
    "experimental-godot-api",
] }
bytemuck = { version = "1", features = ["derive"] }
rustfft = "6"
rand = "0.9"
rand_pcg = "0.9"

[dev-dependencies]
wgpu = "24"
pollster = "0.4"
naga = { version = "24", features = ["spv-in", "wgsl-out"] }
serde_json = "1"
rand = "0.9"

[profile.release]
debug = true
strip = false           # Don't remove the info perf needs
split-debuginfo = "off" # Keep symbols in the binary for easier perf access
